@@ -1,5 +1,9 @@
 2009-05-21  Ozan Çağlayan <ozan@pardus.org.tr>
-	* bin/mudur.py (startServices): Don't wait for X11 socket if no head_start is defined.
+	* bin/mudur.py (startServices): Don't wait for X11 socket if no head_start
+	is defined,
+	* bin/mudur.py (UI): Make color characters a dictionary,
+	* bin/mudur.py: Refactor messages, drop a useless information message
+	about udev.
 
 2009-05-20  Bahadır Kandemir <bahadir@pardus.org.tr>
 	* bin/mudur.py: Do nothing if device is unplugged.
